Made Mobile View Hamburger Menu changes

--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="mobile-menu">
-        <button class="close-menu">&times;</button>
+        <button class="close-menu"><i class="fa-solid fa-xmark"></i></button>
         <div class="mobile-nav-links">
           <div class="mobile-nav-item">
             <span>Diamonds</span>
@@ -69,10 +69,10 @@
         <hr class="mobile-menu-divider" />
         <div class="mobile-secondary-links">
           <a href="#" class="mobile-link-item">
-            <img src="../assests/icons/inquiry.png" alt="" /> Inquiry
+            <i class="fas fa-edit"></i> Inquiry
           </a>
           <a href="#" class="mobile-link-item">
-            <img src="../assests/icons/Feedback.png" alt="" /> Feedback
+            <i class="fas fa-comment-dots"></i> Feedback
           </a>
         </div>
       </div>
