--- a/html/index.html
+++ b/html/index.html
@@ -33,9 +33,15 @@
         <a href="#">Watches</a>
       </nav>
       <div class="header-icons">
-        <a href="#" class="icon search-icon" aria-label="Search"></a>
-        <a href="#" class="icon favourite-icon" aria-label="Favourite"></a>
-        <a href="#" class="icon awesome-user-icon" aria-label="Profile"></a>
+        <a href="#" aria-label="Search">
+          <i class="fa-solid fa-magnifying-glass header-icon"></i>
+        </a>
+        <a href="#" aria-label="Favourite">
+          <i class="fa-regular fa-heart header-icon" id="favourite"></i>
+        </a>
+        <a href="#" aria-label="Profile">
+          <i class="fa-solid fa-user header-icon"></i>
+        </a>
       </div>
 
       <div class="mobile-menu">
