Minor changes like size,font-family,etc adjusted

--- a/html/index.html
+++ b/html/index.html
@@ -34,13 +34,20 @@
       </nav>
       <div class="header-icons">
         <a href="#" aria-label="Search">
-          <i class="fa-solid fa-magnifying-glass header-icon"></i>
+          <i
+            class="fa-solid fa-magnifying-glass header-icon"
+            style="width: 31px; height: 31px"></i>
         </a>
         <a href="#" aria-label="Favourite">
-          <i class="fa-regular fa-heart header-icon" id="favourite"></i>
+          <i
+            class="fa-regular fa-heart header-icon"
+            id="favourite"
+            style="width: 31px; height: 31px"></i>
         </a>
         <a href="#" aria-label="Profile">
-          <i class="fa-solid fa-user header-icon"></i>
+          <i
+            class="fa-solid fa-user header-icon"
+            style="width: 31px; height: 31px"></i>
         </a>
       </div>
 
@@ -75,18 +82,20 @@
         <hr class="mobile-menu-divider" />
         <div class="mobile-secondary-links">
           <a href="#" class="mobile-link-item">
-            <i class="fas fa-edit"></i> Inquiry
+            <i class="fa-regular fa-comments"></i> Inquiry
           </a>
           <a href="#" class="mobile-link-item">
-            <i class="fas fa-comment-dots"></i> Feedback
+            <i class="fa-solid fa-user feedback"></i> Feedback
           </a>
         </div>
       </div>
     </header>
 
-    <a href="#" class="inquiry-btn"> <i class="fas fa-edit"></i> Inquiry </a>
+    <a href="#" class="inquiry-btn">
+      <i class="fa-regular fa-comments inquiry"></i> Inquiry
+    </a>
     <a href="#" class="feedback-btn"
-      ><i class="fas fa-comment-dots"></i> Feedback</a
+      ><i class="fa-solid fa-user feedback"></i> Feedback</a
     >
 
     <main>
