Made minor changes

--- a/html/index.html
+++ b/html/index.html
@@ -36,18 +36,18 @@
         <a href="#" aria-label="Search">
           <i
             class="fa-solid fa-magnifying-glass header-icon"
-            style="width: 31px; height: 31px"></i>
+            style="width: 31px; height: 31px; color: black"></i>
         </a>
         <a href="#" aria-label="Favourite">
           <i
             class="fa-regular fa-heart header-icon"
             id="favourite"
-            style="width: 31px; height: 31px"></i>
+            style="width: 31px; height: 31px; color: black"></i>
         </a>
         <a href="#" aria-label="Profile">
           <i
             class="fa-solid fa-user header-icon"
-            style="width: 31px; height: 31px"></i>
+            style="width: 31px; height: 31px; color: black"></i>
         </a>
       </div>
 
@@ -105,7 +105,7 @@
 
           <div class="carousel">
             <div
-              class="item"
+              class="item vintage-image"
               data-title="Vintage & Antique"
               data-price="$4500"
               data-promo="Take 20% off for a limited time."
@@ -115,7 +115,7 @@
             </div>
 
             <div
-              class="item"
+              class="item pave-image"
               data-title="Pave"
               data-price="$2500"
               data-promo="Take 5% off for a limited time."
@@ -125,7 +125,7 @@
             </div>
 
             <div
-              class="item"
+              class="item halo-image"
               data-title="Hidden Halo"
               data-price="$3500"
               data-promo="Take 10% off for a limited time."
