--- a/html/index.html
+++ b/html/index.html
@@ -105,7 +105,7 @@
 
           <div class="carousel">
             <div
-              class="item vintage-image"
+              class="item"
               data-title="Vintage & Antique"
               data-price="$4500"
               data-promo="Take 20% off for a limited time."
@@ -115,7 +115,7 @@
             </div>
 
             <div
-              class="item pave-image"
+              class="item"
               data-title="Pave"
               data-price="$2500"
               data-promo="Take 5% off for a limited time."
@@ -125,7 +125,7 @@
             </div>
 
             <div
-              class="item halo-image"
+              class="item"
               data-title="Hidden Halo"
               data-price="$3500"
               data-promo="Take 10% off for a limited time."
