Adjusted image height

--- a/html/index.html
+++ b/html/index.html
@@ -125,7 +125,7 @@
             </div>
 
             <div
-              class="item"
+              class="item hidden-halo"
               data-title="Hidden Halo"
               data-price="$3500"
               data-promo="Take 10% off for a limited time."
