--- a/html/index.html
+++ b/html/index.html
@@ -115,7 +115,7 @@
             </div>
 
             <div
-              class="item"
+              class="item pave"
               data-title="Pave"
               data-price="$2500"
               data-promo="Take 5% off for a limited time."
