Responsive changes made

--- a/html/index.html
+++ b/html/index.html
@@ -115,7 +115,7 @@
             </div>
 
             <div
-              class="item pave"
+              class="item"
               data-title="Pave"
               data-price="$2500"
               data-promo="Take 5% off for a limited time."
@@ -125,7 +125,7 @@
             </div>
 
             <div
-              class="item hidden-halo"
+              class="item"
               data-title="Hidden Halo"
               data-price="$3500"
               data-promo="Take 10% off for a limited time."
@@ -251,13 +251,14 @@
         dimend SCAASI Jeweler is a unique Jewelry store located in Chicago with
         an emphasis on great style and exceptional quality.
       </div>
-      <hr />
+      <hr class="footer-nav-hr-1" />
       <div class="footer-nav">
         <a href="#">Education</a>
         <a href="#">About Us</a>
         <a href="#">Customer Care</a>
         <a href="#">Contact Us</a>
       </div>
+      <hr class="footer-nav-hr-2" />
       <div class="footer-payments">
         <img src="../assests/logo/Image 51.webp" alt="GIA" />
         <img src="../assests/logo/Image 49.webp" alt="JOA" />
@@ -267,7 +268,7 @@
         <img
           src="../assests/logo/Mastercard Logo.webp"
           alt="MasterCard"
-          style="width: 80px" />
+          style="width: 60px" />
         <img src="../assests/logo/Discover Logo.webp" alt="Discover" />
         <img src="../assests/logo/Paypal Logo.webp" alt="PayPal" />
         <img
