--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>dimendSCAASI | Vintage & Antique</title>
+    <title>dimendSCAASI</title>
     <link rel="stylesheet" href="../css/style2.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
